<resources>
    <string name="app_name">TrueHampton</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este Campo es Requerido</string>
    <string name="error_no_email">El correo no existe</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_arrival">Fecha de Llegada</string>
    <string name="error_departure">Fecha de Salida</string>
    <string name="error_hab">Numero de Habitaciones</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galeria">galeria</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="servicio">Servicio</string>
    <string name="habitacion">Habitaciones</string>
    <string name="reserva">Reservar</string>
    <string name="todo">TODO</string>
    <string name="title_activity_ubicacion">Map</string>
    <string name="bienvenido_a_hampton">Bienvenido A Hampton</string>
    <string name="acerca_de">Acerca De</string>
    <string name="inicio">Inicio</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="registro_de_reservaci_n">Registro de Reservación</string>
    <string name="fecha_de_entrada">Fecha de Entrada:</string>
    <string name="fecha_de_salida">Fecha de Salida:</string>
    <string name="hora_de_salida">Numero de Habitaciones:</string>
    <string name="hora_de_entrada">Hora de Entrada:</string>
    <string name="n_mero_de_noches">Número de noches</string>
    <string name="hintfecha">00-00-0000</string>
    <string name="hinthora">3:00p.m.</string>
    <string name="number">number</string>
    <string name="title_activity_maps">Map</string>
    <string name="men">Menú</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="fecha_de_nacimiento">Fecha De Nacimiento</string>
    <string name="servicios">Servicios</string>
    <string name="restaurante">Restaurante</string>
    <string name="estacionamiento">Estacionamiento</string>
    <string name="destinos_turisticos">Destinos Turisticos</string>
    <string name="title_activity_hampton_inn">HamptonInn</string>
    <string name="kids">Niños</string>
    <string name="adult">Adultos</string>
    <string name="available">Disponible</string>
    <string name="title_activity_drawerhampton">Hampton Inn Torreon</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="formatofecha">Año-Mes-Dia</string>
    <string name="universida_tecnologica_de_torre_n">Universidad Tecnologica De Torreón</string>
    <string name="Equipo">Hecha por: Juana Maria Gracía García Diego Pineda Cervantes Hector Faustino Peralta R. Ingrid Ascenet Huerta V. Hector Miguel Soto Hdz.</string>
    <string name="Profe">Prof. Ing. Ramiro Esquivel Duran</string>
    <string name="Carrera">Tecnologias De La Informacíon Y Comunicación Area Sistemas Informaticos</string>
    <string name="versio">Version de Android 5.0</string>
    <string name="proyecto_final">Proyecto Final</string>
    <string name="gradoseccion">TSU 5 A</string>
    <string name="acercade">Acerca de la app</string>
    <string name="direccion">Direccion</string>
    <string name="calle">Calle</string>

    <string name="numero_de_calle">Numero de calle</string>
    <string name="ciudad">Ciudad</string>
    <string name="estado">Estado</string>

    <string name="pais">Pais</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="tipo_de_numero">Tipo de numero</string>
    <string name="numero">Numero</string>
    <string name="numero_de_tarjeta">Numero de tarjeta</string>
    <string name="banco">Banco</string>
    <string name="afiliacion">Afiliacion</string>
    <string name="fecha_de_expiracion">Fecha de expiracion</string>
    <string name="expiracion">Expiracion</string>

    <string name="bienvenido_a_hampton_inn_torre_n">Bienvenido a hampton Inn Torreón</string>

    <string name="diferente_hora">Diferente Hora</string>
    <string name="next_to_pay">Siguiente</string>

</resources>
