<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Registro">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="#151414"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="490dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/habitaciones">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView5"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/edits"
            android:hint="@string/correo_electronico"
            android:textSize="14sp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/pas"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/pasword" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/edits"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/nombre"
            android:textColor="#151414"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/edits"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/apellido_paterno"
            android:textColor="#151414"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/apaterno"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/edits"
            android:hint="@string/apellido_paterno"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:text="@string/apellido_materno"
            android:textColor="#151414"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amaterno"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/edits"
            android:hint="@string/apellido_materno"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="360dp"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="#151414"
            android:textSize="20sp"
            android:textStyle="bold" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/fnacimiento"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="369dp"
            android:background="@drawable/edits"
            app:mask="##-##-####"
            app:keep_hint="true"
            android:inputType="date" />

        <Button
            android:id="@+id/mandar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="408dp"
            android:background="#c38190b7"
            android:text="@string/registrar" />


    </RelativeLayout>

</FrameLayout>