<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Servicio">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/servicios"
        android:textColor="#000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="0dp"
        android:layout_height="490dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/habitaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/comida"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/esta"
            android:layout_alignBottom="@+id/esta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:drawableTop="@drawable/comidaa"
            android:text="@string/restaurante"
            app:layout_constraintBaseline_toBaselineOf="@+id/esta"
            app:layout_constraintEnd_toStartOf="@+id/esta"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/esta"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/turismo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="39dp"
            android:drawableTop="@drawable/carros"
            android:text="@string/estacionamiento"
            app:layout_constraintBottom_toTopOf="@+id/turismo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comida"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/turismo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:drawableTop="@drawable/tur"
            android:text="@string/destinos_turisticos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/esta" />
    </RelativeLayout>
</FrameLayout>