<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuHome">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="76dp"
        android:text="@string/men"
        android:textAlignment="center"
        android:textColor="#151414"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/per"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:background="@drawable/perfil"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="318dp"
        tools:layout_editor_absoluteY="90dp" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/habitaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.621"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/habitacion"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="82dp"
            android:text="@string/habitacion"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/reserva"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/habitacion"
            android:layout_alignBottom="@+id/habitacion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/reserva"
            android:textSize="20sp"
            android:visibility="visible"

            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/servicio"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ubicacion"
            android:layout_alignBottom="@+id/ubicacion"
            android:layout_alignEnd="@+id/reserva"
            android:layout_alignRight="@+id/reserva"
            android:text="@string/servicio"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/ubicacion"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ubicacion"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/habitacion"
            android:layout_alignRight="@+id/habitacion"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/ubicacion"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="43dp"
            android:visibility="invisible" />

    </RelativeLayout>
</FrameLayout>